--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,9 +12,9 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.2
-  http: ^0.13.5
   cached_network_image: ^3.2.3
   flutter_bloc: ^8.1.1
+  dio: ^4.0.6
 
 dev_dependencies:
   flutter_test:
